aligning fix

--- a/assets/Library.css
+++ b/assets/Library.css
@@ -100,3 +100,10 @@ select:active {
   display: none;
   border-left: 1px solid var(--light);
 }
+
+#form-return {
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  font-size: 1rem;
+}
